# gdsc-rust-study

./: Cargo.toml  Dockerfile  README.md
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs  telemetry.rs
tests/: health_check.rs
